--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-router": "^7.7.1",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
